# cbf_tanks

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  Utility.h  package.xml
config/: KE_task_param.yaml  control_param.yaml  force_task_param.yaml  tank_param.yaml  var_stiff_task_param.yaml
data/: Control-FRI-Driver_2ms.init  InitAnglePos.txt  InitAnglePos_cutting.txt  InitAnglePos_force.txt  InitAnglePos_master.txt  Plotting.m
data/KE/: Pow_rob_OFF.txt  Pow_rob_ON.txt  Pow_rob_vid_ON.txt  Pow_rob_vid_ns.txt  Pow_rob_vid_off.txt  Pow_rob_vid_ws.txt  Pow_rob_vidns.txt  Pow_rob_vidws.txt  Tank_rob_OFF.txt  Tank_rob_ON.txt  Tank_rob_vid_OFF.txt  Tank_rob_vid_ON.txt  Tank_rob_vid_ns.txt  Tank_rob_vid_ws.txt
data/force/: Pow_rob_NS.txt  Pow_rob_PTS.txt  Pow_rob_vid_ns.txt  Pow_rob_vid_ws.txt  Pow_rob_vidns.txt  Pow_rob_vidns2.txt  Pow_rob_vidws.txt  Pow_rob_vidws2 (copy).txt  Pow_rob_vidws2.txt  Pow_rob_vidws2_9.7.txt  Tank_rob_NS.txt  Tank_rob_PTS.txt  Tank_rob_vid_ns.txt  Tank_rob_vid_ns2.txt  Tank_rob_vid_ws.txt  Tank_rob_vid_ws2 (copy).txt  Tank_rob_vid_ws2.txt  Tank_rob_vid_ws2_9.7.txt
data/rob/: Pow_rob.txt  Pow_rob_NKE.txt  Pow_rob_NS.txt  Pow_rob_NS2.txt  Pow_rob_NoScl.txt  Pow_rob_PS.txt  Pow_rob_PTS.txt  Pow_rob_PTS2.txt  Pow_rob_PowSca.txt  Pow_rob_TS.txt  Pow_rob_TankScal.txt  Pow_rob_WKE.txt  Pow_rob_ord.txt  Pow_rob_ord1.txt  Pow_rob_ord1_c1.txt  Pow_rob_ord1_c2.txt  Pow_rob_ord2.txt  Pow_rob_ord2_c1.txt  Pow_rob_ord2_c2.txt  Pow_rob_ord2_c3.txt  Pow_rob_ord2_c4.txt  Pow_rob_ord2_c5.txt  Pow_rob_ord2_c6.txt  Pow_rob_ord2_c7.txt  Pow_rob_ord2_c8.txt  Pow_rob_ord2_c9.txt  Pow_rob_vid_NTS_ord2_c1.txt  Pow_rob_vid_PTS_ord2_c1.txt  Pow_rob_vid_TS_ord1_c1.txt  Pow_rob_vid_TS_ord2_c1.txt  Pow_rob_vid_firstcbf_1.txt  Pow_rob_vid_firstcbf_2.txt  Pow_rob_vid_firstcbf_3.txt  Pow_rob_vid_ord1_c1.txt  Pow_rob_vid_ord2_c1.txt  Tank_rob.txt  Tank_rob_NKE.txt  Tank_rob_NS.txt  Tank_rob_NS2.txt  Tank_rob_NoScl.txt  (+30 more)
data/rob_track/: Pow_rob.txt  Pow_rob_NS.txt  Pow_rob_PS.txt  Pow_rob_PTS.txt  Pow_rob_TS.txt  Pow_rob_ord1.txt  Pow_rob_ord2.txt  Tank_rob.txt  Tank_rob_NS.txt  Tank_rob_PS.txt  Tank_rob_PTS.txt  Tank_rob_TS.txt  Tank_rob_ord1.txt  Tank_rob_ord2.txt
data/sim/: Pow_sim.txt  Tank_sim.txt  first_ordercbf_test.txt
include/: CbfTank.h  FastResearchInterfaceTest.h  UtilityFunctions.h  base_planner.h  cbf_tank.h  energy_tank.h  first_order_tank.h  firstorderTank.h  force_task_planner.h  kinetic_lim_task_planner.h  min_jerk.h  quatUtils.h  utility_fri.h  varStiff_task_planner.h
launch/: cbf_tank.launch
src/: CbfTank.cpp  PassiveControl.cpp  Utility.cpp  UtilityFunctions.cpp  Utility_Functions.hpp  cbf_tank.cpp  cbftank_main.cpp  first_order_tank.cpp  firstorderTank.cpp  min_jerk.cpp  quatUtils.cpp  run_trajectory_simple.cpp  utility.cpp  utility_fri.cpp
src/hcr_force_comp/: CMakeLists.txt  ft_comp.cpp  ft_comp.h  main.cpp  package.xml
src/tasks/: KE_limitation_node.cpp  force_control_node.cpp  var_stiff_node.cpp
